# bindkey-software

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  bindkey_cert.pem  bindkey_config.toml  bindkey_update.pub  server_ip.txt  update.pub
.github/workflows/: CI.yml  codeql.yml
src/: api_service.rs  config.rs  event_handler.rs  main.rs  protocol.rs  send_file.rs  share_protocol.rs  usb_service.rs
src/pages/: enrollment.rs  home.rs  login.rs  mod.rs  volumes.rs
src/protocol/: mod.rs  protocol.rs  share_protocol.rs  updater.rs
