[package]
name = "bindkey-software"
version = "0.1.0"
edition = "2024"

[dependencies]
# Interface Graphique (GUI)
eframe = "0.29.1" # Contient egui. Vérifie la dernière version sur crates.io
egui = "0.29.1"

# Communication Matérielle (Vers ESP32)
serialport = "4.6.0"

# Communication Réseau (Vers Serveur)
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Gestion des données (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilitaires
anyhow = "1.0" # Pour une gestion d'erreur facile
log = "0.4"
env_logger = "0.11"
json = "0.12.4"
sysinfo = "0.37.2"

#Hash
sha2 = "0.10"
hex = "0.4"